--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,48 +1,48 @@
-#name: Docker
-#
-#on:
-#  push:
-#    branches: [main]
-#    tags: ["v*.*.*"]
-#
-#env:
-#  REGISTRY: ghcr.io
-#  IMAGE_NAME: ${{ github.repository }}
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      packages: write
-#      id-token: write
-#
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#
-#      - name: Setup Docker buildx
-#        uses: docker/setup-buildx-action@v1.6.0
-#
-#      - name: Log into registry ${{ env.REGISTRY }}
-#        if: github.event_name != 'pull_request'
-#        uses: docker/login-action@v1.12.0
-#        with:
-#          registry: ${{ env.REGISTRY }}
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Extract Docker metadata
-#        id: meta
-#        uses: docker/metadata-action@v3.6.2
-#        with:
-#          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-#
-#      - name: Build and push Docker image
-#        id: build-and-push
-#        uses: docker/build-push-action@v2.7.0
-#        with:
-#          context: .
-#          push: ${{ github.event_name != 'pull_request' }}
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
+name: Docker Image CI
+
+on:
+  push:
+    branches: [ "main" ]
+env:
+  IMAGE_NAME: frontendms
+  IMAGE_TAG: ${{ github.run_number }}
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
+jobs:
+  build:
+    permissions: write-all
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      -
+        name: Build the Docker image
+        run: docker build . --file Dockerfile --tag camilodev/frontendms:${{ secrets.MAJOR }}.${{ env.IMAGE_TAG }}
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Push to DockerHub
+        run: docker push camilodev/frontendms:${{ secrets.MAJOR }}.${{ env.IMAGE_TAG }}
+      - name: run number with offset
+        run: |
+          echo ::set-env name=GITHUB_RUN_NUMBER_WITH_OFFSET::$(($IMAGE_TAG-1))
+      - run: echo $GITHUB_RUN_NUMBER_WITH_OFFSET
+  staging:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: executing remote ssh commands using password
+        uses: fifsky/ssh-action@master
+        with:
+          command: |
+            cd /tmp
+            ls -a
+            docker rm -f frontendms
+            docker run -d -p 3000:3000 --name frontendms camilodev/frontendms:${{ secrets.MAJOR }}.${{ env.IMAGE_TAG }}
+          host: ${{ secrets.SSH_HOST }}
+          user: root
+          key: ${{ secrets.SSH_KEY}}
