--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://20.169.83.87:5009
+NEXT_PUBLIC_BASE_URL=http://aerolineavuelogrupouno.westus3.cloudapp.azure.com:5065
 NEXTAUTH_SECRET=nI+cD/bV4Cf6Q08a5p2nEA+U3nw005W630QhCkF0UEk=
